# template-projetos-cc

./: README.md  cookiecutter.json  setup_dev.bat
{{cookiecutter.project_name}}/: CHANGELOG.md  Makefile  README.md  pyproject.toml  run.bat  setup.bat
